<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">





    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:clickable="true"
            android:contentDescription="@string/add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_baseline_add" />


        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="230sp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolBar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:contentScrim="@color/purple_700"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:clickable="true"
                    android:contentDescription="back"
                    app:srcCompat="@drawable/ic_baseline_arrow_back" />

                <ImageView
                    android:id="@+id/top_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:layout_collapseMode="parallax" />

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    app:layout_collapseMode="pin" />
            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/movie_description"
            app:layout_constraintTop_toBottomOf="@+id/appBar">

            <TextView
                android:id="@+id/movie_name"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:maxLines="3"
                android:text="Knock at the Cabin"
                android:textColor="@color/black"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/top_image" />


            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movie_name">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="DIRECTED BY"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/director_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M. Night Shyamalan"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/movie_year"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2023"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/movie_duration"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="100 mins"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/movie_trailer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:text="@string/trailer"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:scaleType="fitCenter"
            android:layout_marginRight="8dp"
            app:layout_constraintEnd_toEndOf="@+id/movie_description"
            app:layout_constraintTop_toBottomOf="@+id/appBar"
            app:srcCompat="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/movie_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="şldsafksdjgklfjglkdfjhlkjfhkdljfhkşlkdflghjdgfklghjdgklhj"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/movie_poster"
            tools:layout_editor_absoluteX="0dp" />

        <RatingBar
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/rating"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/movie_description"
            app:layout_constraintVertical_bias="1.0" />

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/cast_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/movie_rating" />


    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.core.widget.NestedScrollView>